--- a/cli/Dockerfile
+++ b/cli/Dockerfile
@@ -8,6 +8,7 @@ ARG VERSION
 
 RUN apt-get update                                                          && \
     apt-get install -y --no-install-recommends ruby mono-runtime            && \
+    rm -rf /var/lib/apt/lists/*                                             && \
     gem install bundle-audit                                                && \
     gem cleanup
 
@@ -19,8 +20,7 @@ RUN unzip dependency-check-${VERSION}-release.zip -d /usr/share/            && \
     chown -R ${user}:${user} /usr/share/dependency-check                    && \
     mkdir /report                                                           && \
     chown -R ${user}:${user} /report                                        && \
-    apt-get autoremove -y                                                   && \
-    rm -rf /var/lib/apt/lists/* /tmp/*
+    rm -rf /tmp/*
  
 USER ${user}
 
